@@ -1,3 +1,9 @@
+2007-01-31 Sarka Todorova <sarka.todorova@cern.ch>
+	* layer representation added for stations (without material at the moment)
+	* bugfix in MTGB 
+	* improved identification, tube reference position 
+	* tagged MuonTrackingGeometry-00-00-25
+
 2006-12-18 Sarka Todorova <sarka.todorova@cern.ch>
 	* cleanup
 	* tagged MuonTrackingGeometry-00-00-24
